# ai-governor

./: .copilot-instructions.md  .gitignore  CONTRIBUTING.md  MEMORY.md  README.md  SECURITY.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: v0_3_contract.yml
ai_governor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
cli/: enforce.py  main.py  validate.py
compliance/: base-policy.example.yaml
core/: decision.py  policy_engine.py  policy_validator.py
core/audit/: emitter.py  sinks.py
core/enforcement/: data.py  model.py  orchestrator.py  region.py  tools.py
core/policy/: errors.py  loader.py  merge.py
core/redaction/: engine.py
docs/: QUICKSTART.md  STABILITY.md  WHY_THIS_EXISTS.md  ci-example.md  policy-schema-v0.1.md  policy-schema-v0.2.md
examples/demo_app/: app.py  cmd.sh  policy.yaml  request_allow.json  request_block.json  request_modify.json
examples/fastapi_demo/: README.md  main.py  test.sh
tests/: test_audit_emitter.py  test_audit_file_sink.py  test_audit_sink_hardening.py  test_decision.py  test_enforcement_orchestrator.py  test_model_enforcement.py  test_pii_enforcement.py  test_policy_inheritance.py  test_policy_validator.py  test_redaction_engine.py  test_region_enforcement.py  test_tool_enforcement.py
tests/v0_3_contract/: README.md  __init__.py  conftest.py  test_audit_sink_failure.py  test_cli_exit_codes.py  test_determinism.py  test_model_enforcement.py  test_pii_enforcement.py  test_policy_validation.py  test_region_enforcement.py
tests/v0_4_schema/: test_metadata_support.py  (+3 more)
