[project]
name = "ai-governor"
version = "0.4.0-alpha
description = "Model-level governance and compliance framework for LLM systems"
authors = [{ name = "Ugendreshwar Kudupudi" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0"
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
ai-governor = "cli.main:main"

